[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x402-payment-harness"
version = "1.0.0"
description = "EOA-based test harness for x402 micropayments — sign and send EIP-712 TransferWithAuthorization payments without CDP dependency"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["x402", "eip-712", "usdc", "base", "micropayments", "web3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "eth-account>=0.11.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio"]

[project.scripts]
x402-pay = "x402_harness.cli:main"

[project.urls]
Homepage = "https://github.com/rplryan/x402-payment-harness"
Documentation = "https://github.com/rplryan/x402-payment-harness#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["x402_harness*"]
