[metadata]
name = x402-payment-harness
version = 1.0.0

[options]
packages = x402_harness
install_requires =
    eth-account>=0.11.0
    requests>=2.28.0
python_requires = >=3.10

[options.entry_points]
console_scripts =
    x402-pay = x402_harness.cli:main

[options.extras_require]
dev =
    pytest>=7
    pytest-asyncio
